src/pages/styles/storyDetail.css
#storyDetailContainer {
    text-align: center;
    display: flex;
    justify-content: center;
    flex-direction: column;
    align-items: center;
}

#subDetailContainer {
    width: 60%;
    box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
    display: flex;
    flex-direction: column;
    background-color: #FAFAFA;
    justify-content: center;
    align-items: center;
}

#textContainer {
    display: flex;
    width: 100%;
    justify-content: center;
    flex-direction: row;
    align-items: center;
}

#commentsContainer {
    width: 100%;
    margin-bottom: 1em;
}

#commentsDivider span {
    font-size: 0.75em;
    color: gray;
    font-weight: bold;
    margin-top: 1em;
    margin-bottom: 1em;
}

#commentsSection {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.storyDetailTitleContainer {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 90%;
}


.storyDetailTitle {
    margin-top: 1em;
    color: #333333;
    text-decoration: none;
}

.storyDetailUrl {
    font-size: 0.75em;
    margin-bottom: 1em;
}

#backButton {
    margin-top: 1em;
}


.storyDetailImage {
    width: 150px;
    height: 150px;
    margin-bottom: 1em;
}

.noStoryDetailImage {
    border: 1px solid gray;
    text-align: center;
    width: 300px;
    height: 300px;
    display: flex;
    align-items: center;
    justify-content: center;
}

@media screen and (max-width: 480px) {
    #storyContainer {
        width: 100%;
        box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
    }

    #subDetailContainer {
        width: 100%;
    }

    .storyDetailImage {
        width: 300px;
        height: 300px;
    }

    #textContainer {
        display: flex;
        justify-content: center;
        margin-top: 1em;
        min-width: 100%;
    }

    #textContainer a {
        min-width: 35%;
        margin-left: -3em;
    }

    .storyDetailTitle {
        color: #333333;
        text-decoration: none;
        margin-top: 1em;
    }

    .storyDetailTitleContainer {
        margin-left: -1em;
        max-width: 80%;
    }

    .storyDetailUrl {
        font-size: 0.75em;
    }
}

